--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -35,6 +35,15 @@
         <welcome-file>control</welcome-file>
     </welcome-file-list>
 
+    <filter>
+        <filter-name>AccessFilter</filter-name>
+        <filter-class>Lab_2.AccessFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AccessFilter</filter-name>
+        <url-pattern>/AссessFilter</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
